; ModuleID = '/home/carl/AnghaBench/FFmpeg/libswresample/arm/extr_audio_convert_init.c_conv_fltp_to_s16_2ch_neon.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libswresample/arm/extr_audio_convert_init.c_conv_fltp_to_s16_2ch_neon.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32**, i32**, i32)* @conv_fltp_to_s16_2ch_neon to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @conv_fltp_to_s16_2ch_neon(i32** %0, i32** %1, i32 %2) #0 {
  %4 = alloca i32**, align 8
  %5 = alloca i32**, align 8
  %6 = alloca i32, align 4
  store i32** %0, i32*** %4, align 8
  store i32** %1, i32*** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32**, i32*** %4, align 8
  %8 = load i32*, i32** %7, align 8
  %9 = load i32**, i32*** %5, align 8
  %10 = bitcast i32** %9 to float**
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @swri_oldapi_conv_fltp_to_s16_2ch_neon(i32* %8, float** %10, i32 %11, i32 2)
  ret void
}

declare dso_local i32 @swri_oldapi_conv_fltp_to_s16_2ch_neon(i32*, float**, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
